--- a/app/views/themes/bioart/home/about.html.haml
+++ b/app/views/themes/bioart/home/about.html.haml
@@ -10,6 +10,48 @@
       .page_image= image_tag @about_text.background.url
       .text
         .excerpt= raw @about_text.body
+
+  .row
+    .small-10.small-centered.medium-12.columns
+      .text_box
+        .red Join our mailing list!
+  .row
+    .small-12.columns
+      .text
+        .excerpt
+          %p By subscribing to our monthly newsletter you'll be among the first to hear about SOLU/Bioart Society exhibitions, events and other opportunities.
+          :plain
+            </div><form class="js-cm-form" id="subForm" class="js-cm-form" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="5B5E7037DA78A748374AD499497E309EADD28C29C047DA92EF81C114188147A87951719AE6821670A841AB95717D8331A19FBCFEE12F088F288D745B68E89D77"><div size="base" class="sc-jzJRlG bMslyb"><div size="small" class="sc-jzJRlG liOVdz"><div><label size="0.875rem" color="#5d5d65" class="sc-gzVnrw dEVaGV">First name <span class="sc-dnqmqq iFTUZ">*</span></label><input aria-label="First name" id="fielddjuylihr" maxLength="200" name="cm-f-djuylihr" required class="sc-iwsKbI iMsgpL" /></div></div><div size="small" class="sc-jzJRlG liOVdz"><div><label size="0.875rem" color="#5d5d65" class="sc-gzVnrw dEVaGV">Last name <span class="sc-dnqmqq iFTUZ">*</span></label><input aria-label="Last name" id="fielddjuylihy" maxLength="200" name="cm-f-djuylihy" required class="sc-iwsKbI iMsgpL" /></div></div><div size="small" class="sc-jzJRlG liOVdz"><div><label size="0.875rem" color="#5d5d65" class="sc-gzVnrw dEVaGV">Email <span class="sc-dnqmqq iFTUZ">*</span></label>
+              <input autoComplete="Email" aria-label="Email" id="fieldEmail" maxLength="200" name="cm-oihdyiu-oihdyiu" required type="email" class="js-cm-email-input sc-iwsKbI iMsgpL" /></div></div><div size="base" class="sc-jzJRlG bMslyb"><div><div size="base" class="sc-jzJRlG bMslyb"><div><div><div class="sc-bwzfXH ebeRtN"><input aria-required id="cm-privacy-consent" name="cm-privacy-consent" required type="checkbox" class="sc-bZQynM eKOoKL" /><label size="0.875rem" color="#434d5d" for="cm-privacy-consent" class="sc-bxivhb iHsWXX">I agree to my personal data being stored and used for communication purposes.</label><div class="sc-EHOje jMsntP">*</div></div></div><input id="cm-privacy-consent-hidden" name="cm-privacy-consent-hidden" type="hidden" value="true" /></div></div></div></div></div><button size="1rem" color="#fff" type="submit" class="js-cm-submit-button sc-jKJlTe jHkwuK">Subscribe</button></form></div></div></div></div></div><style>.iIDDUy { background-color: rgb(255, 255, 255); border-top-left-radius: 0.3125rem; border-top-right-radius: 0.3125rem; border-bottom-right-radius: 0.3125rem; border-bottom-left-radius: 0.3125rem; max-width: 35.25rem; margin-left: auto; margin-right: auto; padding: 2.5rem 2.75rem; position: relative; background-position: initial initial; background-repeat: initial initial; }.ebeRtN { align-items: flex-start; display: flex; }.iHsWXX { font-size: 0.875rem; padding-left: 0.5rem; word-wrap: break-word; word-break: break-word; font-family: Helvetica, Arial, sans-serif; color: rgb(67, 77, 93); }.jMsntP { color: rgb(221, 54, 42); font-weight: 400; font-size: 0.75rem; margin-left: 0.125rem; }.eKOoKL { flex-shrink: 0; height: 1rem; position: relative; top: 0.08rem; width: 1rem; }.dEVaGV { font-family: Helvetica, Arial, sans-serif; color: rgb(93, 93, 101); display: block; font-size: 0.875rem; font-weight: 400; margin-bottom: 0.5rem; }.iFTUZ { color: rgb(221, 54, 42); }.iMsgpL { -webkit-appearance: none; background-color: rgb(255, 255, 255); border: 0px; border-top-left-radius: 0.1875rem; border-top-right-radius: 0.1875rem; border-bottom-right-radius: 0.1875rem; border-bottom-left-radius: 0.1875rem; box-sizing: border-box; box-shadow: rgba(142, 154, 173, 0.0980392) 0px 2px 0px 0px inset, rgb(210, 215, 223) 0px 0px 0px 1px inset, rgb(255, 255, 255) 0px 1px 0px 0px; color: rgb(67, 77, 93); font-size: 0.875rem; line-height: 1.5; min-height: 2.8125rem; outline: 0px; padding: 0.75rem 1rem; transition: box-shadow 0.2s ease; width: 100%; }.iMsgpL:focus { box-shadow: transparent 0px 0px 0px 0px inset, rgb(80, 156, 246) 0px 0px 0px 1px inset, rgba(80, 156, 246, 0.247059) 0px 0px 0px 2px; }.bMslyb { margin-bottom: 1.5rem; }.liOVdz { margin-bottom: 1rem; }.dLkilY { margin-left: auto; margin-right: auto; max-width: 29.125rem; padding-bottom: 3.125rem; }.wSZJN { font-size: 3rem; text-align: center; letter-spacing: -1px; line-height: 1.17; -webkit-font-smoothing: antialiased; font-weight: 900; font-family: Lato, sans-serif; color: rgb(0, 0, 0); }.bguLUo { padding: 2rem; border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: rgb(210, 215, 223); margin-bottom: 1.5rem; padding-top: 1.5rem; }.urQia { border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: rgb(210, 215, 223); margin-bottom: 0.75rem; padding-top: 0.75rem; }.gnexaL { margin-bottom: 0.25rem; }.jHkwuK { background-color: rgb(123, 177, 61); border: none; border-top-left-radius: 3px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; border-bottom-left-radius: 3px; color: rgb(255, 255, 255); display: inline-block; font-family: Helvetica, Arial, sans-serif; font-size: 1rem; font-style: normal; font-weight: 700; line-height: 1; outline: 0px; padding: 0.75rem 1.5rem; -webkit-text-decoration-line: none; text-decoration: none; transition: background-color 0.1s ease-in, box-shadow 0.1s ease-in; }.jHkwuK:hover { cursor: pointer; }.fBOZaM { white-space: pre-wrap; font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: rgb(67, 77, 93); }a, abbr, address, article, aside, b, blockquote, body, caption, cite, code, dd, details, dialog, div, dl, dt, em, fieldset, figcaption, figure, form, h1, h2, h3, h4, h5, h6, header, html, i, iframe, img, label, legend, li, main, menu, nav, object, ol, p, pre, section, small, span, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, u, ul { border: 0px; margin: 0px; padding: 0px; }*, ::after, ::before { box-sizing: inherit; }html { font-family: "Helvetica Neue", Arial, sans-serif; font-size: 16px; }h1, h2, h3, h4, h5, h6, html { color: rgb(67, 77, 93); font-weight: 400; line-height: 1.5; }a { color: rgb(25, 169, 229); -webkit-text-decoration-line: underline; text-decoration: underline; }button, label, p { overflow-wrap: break-word; word-wrap: break-word; word-break: break-word; }</style><script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script><script>WebFont.load({google:{families:['Lato:900:latin','Lato:300:latin','Playfair+Display:700italic:latin','Merriweather:700:latin','Crete+Round::latin','PT+Sans+Narrow:700:latin']}});</script><script type="text/javascript" src="https://js.createsend1.com/javascript/copypastesubscribeformlogic.js"></script>
+
+          -# %form{class: :"js-cm-form",  id: :subForm, action: "https://www.createsend.com/t/subscribeerror?description=",  method: :post, :"data-id" => "5B5E7037DA78A748374AD499497E309EADD28C29C047DA92EF81C114188147A87951719AE6821670A841AB95717D8331A19FBCFEE12F088F288D745B68E89D77"}
+          -#   .row
+          -#     .small-9.medium-4.columns
+          -#       %label.label
+          -#       Your first name:
+          -#       %input#fielddjuylihr{type: :text, maxLength: 200, name: "cm-f-djuylihr"}
+          -#   .row
+          -#     .small-9.medium-4.columns
+          -#       %label.label
+          -#       Your last name:
+          -#       %input#fielddjuylihy{type: :text, maxLength: 200, name: "cm-f-djuylihy"}
+          -#   .row
+          -#     .small-9.medium-4.columns
+          -#       %label.label
+          -#       Your email address:
+          -#       %input#fieldEmail{autoComplete: :email, type: :email, required: '', maxLength: 200, name: "cm-oihdyiu-oihdyiu"}
+          -#   .row
+          -#     .small-10.columns
+          -#       %input#cm-privacy-consent{name: "cm-privacy-consent", required: '', type: :checkbox, class: "sc-bZQynM eKOoKL"}
+          -#       %label.label
+          -#       I agree to my personal data being stored and used for communication purposes.
+          -#       %input#cm-privacy-consent-hidden{name: "cm-privacy-consent-hidden", type: :hidden, value: :true}
+          -#   .row
+          -#     .small-9.medium-4.columns
+          -#       %button{type: :submit, class: [:button, :submit]} Submit!
+= content_for :head do
+  :plain
+    <script type="text/javascript" src="https://js.createsend1.com/javascript/copypastesubscribeformlogic.js"></script>
 -# .about_page{style: "background: url(#{@about_text.background.url}) center top no-repeat #d5d7d8;"}
 -#   .row
 -#     .small-10.small-centered.medium-12.columns
