--- a/app/views/themes/bioart/activities/_activitiespage.html.haml
+++ b/app/views/themes/bioart/activities/_activitiespage.html.haml
@@ -2,11 +2,11 @@
 - @activities.reverse.each do |activity|
   = link_to activity, class: [:activity, :column] do
     .activity_image{style: "background: url(#{activity.photos.empty? ? theme_image_path('placeholder.png') : activity.photos.first.image.url(:box)}) center/cover no-repeat"}
-      - if @project
+      - if activity.project && !@project
         .hashtag
-          = "##{@project.name}"
+          = "##{activity.project.name}"
     .activity_content
       .title= activity.name
       .date= date_range(activity.start_at, activity.end_at)
       %p= activity.location
-      .excerpt= truncate_html(sanitize(activity.description, tags: %w{b strong bold i italic em u underline br}), length: 150)  
+      .excerpt= truncate_html(sanitize(activity.description, tags: %w{b strong bold i italic em u underline br}), length: 150)
