--- a/app/assets/themes/bioart/stylesheets/backoffice.css.scss
+++ b/app/assets/themes/bioart/stylesheets/backoffice.css.scss
@@ -17,7 +17,10 @@
  */
 
 @import 'variables';
-
+p.inline-errors {
+  color: red;
+  font-weight: bold;
+}
 
 .row {
   max-width: 75rem !important;
