--- a/app/views/themes/bioart/search/create.html.haml
+++ b/app/views/themes/bioart/search/create.html.haml
@@ -41,7 +41,7 @@
     .row
       .small-12.columns.section_title News
     .row.small-up-1.medium-up-2.large-up-3{:'data-equalizer' => '', :'data-equalize-on' => 'medium'}
-      - @news.each do |post|
+      - @news.sort_by{|x| [-x.relevance, -x.published_at.to_i] }.each do |post|
         = link_to post, class: [:post, :columns] do
 
           .post_image{style: "background: url(#{post.photos.empty? ? theme_image_path('placeholder.png') : post.photos.first.image.url(:box)}) center/cover no-repeat"}
