--- a/app/views/themes/bioart/search/create.html.haml
+++ b/app/views/themes/bioart/search/create.html.haml
@@ -23,9 +23,9 @@
               .description= project.description
   - unless @activities.empty?
     .row
-      .small-12.columns.section_title Activities
+      .small-12.columns.section_title Activities + Events
     .row.small-up-1.medium-up-2.large-up-3
-      - @activities.each do |activity|
+      - @activities.sort_by{|x| -x.start_at }.each do |activity|
         = link_to activity, class: [:activity, :columns] do
           .activity_image{style: "background: url(#{activity.photos.empty? ? theme_image_path('placeholder.png') : activity.photos.first.image.url(:box)}) center/cover no-repeat"}
             - if @project
@@ -35,13 +35,14 @@
             .title= activity.name
             .date= date_range(activity.start_at, activity.end_at)
             %p= activity.location
-            .excerpt= truncate_html(sanitize(activity.description, tags: %w{b strong bold i italic em u underline br}), length: 150)
+            .excerpt
+              = truncate_html(sanitize(activity.description, tags: %w{b strong bold i italic em u underline br}), length: 150)
 
   - unless @news.empty?
     .row
       .small-12.columns.section_title News
     .row.small-up-1.medium-up-2.large-up-3{:'data-equalizer' => '', :'data-equalize-on' => 'medium'}
-      - @news.sort_by{|x| [-x.relevance, -x.published_at.to_i] }.each do |post|
+      - @news.sort_by{|x|  -x.published_at.to_i }.each do |post|
         = link_to post, class: [:post, :columns] do
 
           .post_image{style: "background: url(#{post.photos.empty? ? theme_image_path('placeholder.png') : post.photos.first.image.url(:box)}) center/cover no-repeat"}
