--- a/app/views/themes/bioart/search/create.html.haml
+++ b/app/views/themes/bioart/search/create.html.haml
@@ -25,7 +25,7 @@
     .row
       .small-12.columns.section_title Activities + Events
     .row.small-up-1.medium-up-2.large-up-3
-      - @activities.sort_by{|x| -x.start_at }.each do |activity|
+      - @activities.sort_by{|x| -x.start_at.to_time.to_i }.each do |activity|
         = link_to activity, class: [:activity, :columns] do
           .activity_image{style: "background: url(#{activity.photos.empty? ? theme_image_path('placeholder.png') : activity.photos.first.image.url(:box)}) center/cover no-repeat"}
             - if @project
