--- a/app/views/themes/bioart/posts/_postspage.html.haml
+++ b/app/views/themes/bioart/posts/_postspage.html.haml
@@ -3,7 +3,7 @@
   = link_to post, class: [:post, :column] do
     .post_image{style: "background: url(#{post.photos.empty? ? (@project.nil? ? theme_image_path('placeholder.png') : @project.image.url(:box) ) :  post.photos.first.image.url(:box).gsub('development', 'production')}) #{!@project.nil? && post.photos.empty? ? 'center' : 'center/cover'} no-repeat"}
       - if post.project
-        .hashtag
+        .hashtag{class: post.project.to_hashtag.size > 30 ? 'small' : false }
           = "#{post.project.to_hashtag}"
       - elsif post.node != @node
         .hashtag
