--- a/app/assets/themes/bioart/stylesheets/posts.css.scss
+++ b/app/assets/themes/bioart/stylesheets/posts.css.scss
@@ -33,6 +33,9 @@
         font-family: $titillium;
         color: #333;
         font-size: 1rem;
+        &.small {
+          font-size: 0.8rem;
+        }
         background-color: $headerblue;
         padding: 0.5em 0.313em;
       }
