--- a/app/views/themes/bioart/projects/show.html.haml
+++ b/app/views/themes/bioart/projects/show.html.haml
@@ -39,7 +39,11 @@
                   .title= activity.name
                   .date= date_range(activity.start_at, activity.end_at)
                   %p= activity.location
-                  .excerpt= truncate_html(sanitize(activity.description, tags: %w{b strong bold i italic em u underline br}), length: 150)
+                  .excerpt
+                    - if activity.abstract
+                      = sanitize(activity.abstract, tags: %w{b strong bold i italic em u underline br})
+                    - else
+                      = truncate_html(sanitize(activity.description, tags: %w{b strong bold i italic em u underline br}), length: 200)
         - if @project.activities.published.count > 3
           = content_for :jquery do
             :plain
