--- a/app/views/themes/bioart/events/_event.html.haml
+++ b/app/views/themes/bioart/events/_event.html.haml
@@ -22,7 +22,7 @@
           = activity.eventsessions.map(&:location).uniq.first.blank? ? 'SOLU' : activity.eventsessions.map(&:location).uniq.first
       %p= activity.location
       .excerpt
-        - if activity.abstract
+        - if activity.abstract && activity.abstract.size > 10
           = sanitize(activity.abstract, tags: %w{b strong bold i italic em u underline br})
         - else
           = truncate_html(sanitize(activity.description, tags: %w{b strong bold i italic em u underline br}), length: 200)
