--- a/app/views/themes/bioart/activities/_activitiespage.html.haml
+++ b/app/views/themes/bioart/activities/_activitiespage.html.haml
@@ -9,4 +9,9 @@
       .title= activity.name
       .date= date_range(activity.start_at, activity.end_at)
       %p= activity.location
-      .excerpt= truncate_html(sanitize(activity.description, tags: %w{b strong bold i italic em u underline br}), length: 150)
+      .excerpt
+        - if activity.abstract && activity.abstract.size > 10
+          = sanitize(activity.abstract.gsub("\u00A0", " ").gsub("&nbsp;", " "), tags: %w{b strong bold i italic em u underline br})
+        - else
+          = truncate_html(sanitize(activity.description.gsub("\u00A0", " ").gsub("&nbsp;", " "), tags: %w{b strong bold i italic em u underline br}), length: 200)
+        
