--- a/app/views/themes/bioart/posts/_postspage.html.haml
+++ b/app/views/themes/bioart/posts/_postspage.html.haml
@@ -1,5 +1,5 @@
 
-- @posts.each do |post|
+- @posts.each_with_index do |post, index|
   = link_to post, class: [:post, :column] do
     .post_image{style: "background: url(#{post.photos.empty? ? (@project.nil? ? theme_image_path('placeholder.png') : @project.image.url(:box) ) :  post.photos.first.image.url(:box).gsub('development', 'production')}) #{!@project.nil? && post.photos.empty? ? 'center' : 'center/cover'} no-repeat"}
       - if post.project
@@ -9,7 +9,8 @@
         .hashtag
           = "#{post.node.to_hashtag}"
     .post_content{:'data-equalizer-watch' => ''}
-      .title= post.title
+      .title
+        = post.title
       .excerpt
         - if !post.short_abstract.blank?
           = sanitize(post.short_abstract, tags: %w{b strong bold i italic em u underline br})
