--- a/app/views/themes/bioart/admin/calls/_form.html.haml
+++ b/app/views/themes/bioart/admin/calls/_form.html.haml
@@ -2,7 +2,7 @@
   - if @call.errors.any?
     .row
       .large-6.small-12.columns#error_explanation
-        %h2= "#{pluralize(@call.errors.count, "error")} prohibited this call from being saved:"
+        %h2= "#{pluralize(@call.errors.count, "error")} prohibited this open call from being saved:"
         %ul
           - @call.errors.full_messages.each do |msg|
             %li= msg
